fix horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,26 @@
-html,
-body {
-  overflow-x: hidden;
-}
-
 .App {
   text-align: center;
   color: white;
   background-color: #000000;
-  width: 95vw;
+  width: 100%;
   padding-left: 2em;
   padding-right: 2em;
   max-width: 1300px !important;
-  overflow-x: hidden;
+  margin: 0 auto;
 }
 
 .Welcome-page {
   height: 100vh;
-  width: auto;
+  width: 100%;
+  padding-left: 1em;
+  padding-right: 1em;
   position: relative;
 }
 
 .App-header {
   position: absolute;
   top: 3vh;
-  right: 4vw;
+  right: 8vw;
   display: flex;
 }
 
@@ -64,7 +61,7 @@ body {
 
 .logo-link {
   display: block;
-  margin: 0.2em;
+  margin-left: 0.2em;
   padding: 0;
 }
 
@@ -120,26 +117,18 @@ body {
 }
 
 .section-box {
-  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
   position: relative;
   text-align: left;
   min-height: 100vh;
 }
 
 .sticky-thc {
+  top: 0;
   position: sticky;
-  top: -1vh;
-  background-color: black;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  padding-top: 1em;
+  padding-top: 0.5em;
   z-index: 5;
-}
-
-.sticky-thc > * {
-  margin: 0;
 }
 
 .flex-col {
