--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,9 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
   background-color: #000000;
-  display: flex;
-  justify-content: center;
+  width: 90vw !important;
 }
 
 * {
